
    CHANGES

	- Documentation updates.
	- If a heading already contains a link, the name assigned for
	  the heading is stored in the existing link to avoid nested
	  links.
	- The table parsing code now also traverses THEAD and TFOOT
	  sections and handles multiple TBODY, THEAD, and TFOOT
	  sections.  The THEAD and TFOOT rows are treated as ordinary
	  rows.

    BUG FIXES

	- The path support was still broken.
	- Embedded files and images did not use path or HTTP
	  support.
	- Table cell borders could be drawn on the wrong page
	  if not all cells in a row span more than one page.
	- Large images could end up covering the footer at the
	  bottom of the page (wasn't accounting for the line
	  spacing.)


CHANGES IN HTMLDOC v1.8.9

    NEW FEATURES

	- Added a "--no-numbered" option to turn heading numbers
	  off.
	- Added support for "keywords" META data.
	- Added support for BMP images.
	- Added support for ROWSPAN attribute in tables.
	- Added support for HTTP file references.
	- Added new sample CGI program that can produce a PDF
	  file for any page on a server.
	- Added new n/N, date, and time formats for the header
	  and footer.

    CHANGES

	- Configuration script changes.
	- Now ignore file count in book files; instead, we now
	  look at the first character of the third and
	  subsequent lines - a dash (-) indicates the start of
	  the options. (use a backslash to quote filenames
	  starting with a dash)
	- Multiple-line paragraphs that have only 1 line on the
	  bottom of the current page are now started on the
	  following page.
	- DSC comments in PostScript output were not 100%
	  conformant with the DSC spec.
	- Long table-of-contents entries are now wrapped
	  (original patch supplied by Richard Pennington)
	- New color icon under UNIX when Xpm library available.

    BUG FIXES

	- Didn't allow &#nnn; character escapes inside
	  preformatted text.
	- Empty TBODY groups would cause parse_table() to
	  crash.